mockiato_codegen/tests/ui/malformed-name-attr.stderr
error: #[mockable(name = "...") expects a string literal
 --> $DIR/malformed-name-attr.rs:3:12
  |
3 | #[mockable(name = 1)]
  |            ^^^^
  |
  = help: Example usage: #[mockable(name = "FooMock")]

error: #[mockable(name = "...") expects a string literal
 --> $DIR/malformed-name-attr.rs:6:12
  |
6 | #[mockable(name(FooMock))]
  |            ^^^^
  |
  = help: Example usage: #[mockable(name = "FooMock")]

error: #[mockable(name = "...") expects a string literal
 --> $DIR/malformed-name-attr.rs:9:12
  |
9 | #[mockable(name)]
  |            ^^^^
  |
  = help: Example usage: #[mockable(name = "FooMock")]

error: aborting due to 3 previous errors

